# Generador-de-tickets-telegram-personal

./: .env.example  .gitignore  OCR_imagen.py  README.md  bot_ticket.py  crear_imagen.py  crear_pdf.py  impresora_termica.py  main.py  obtener_json.py  obtener_json_pdf.py  prueba.py  pyproject.toml  requirements.txt
legacy/: bot_ticket.py  contador_elementos.py  crear_imagen_respaldo.py  extraer_datos_pdf.py  prueba.py
src/: OCR_imagen.py  crear_imagen.py  crear_pdf.py  estado_usuario.py  generar_ticket.py  impresora_termica.py  nuevo_bot_tickets.py  obtener_json.py  obtener_json_pdf.py  paths.py  procesar_recibo.py
tests/: OCR_pruebas.py  extraer_datos_pdf.py  fixtures_recibos.py  test_fuentes.py  test_obtener_json.py
