[project]
name = "telebot-tickets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cachetools==5.5.2",
    "PyMuPDF==1.25.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "defusedxml==0.7.1",
    "fonttools==4.57.0",
    "fpdf2==2.8.2",
    "google-api-core==2.24.2",
    "google-auth==2.39.0",
    "google-cloud-vision==3.10.1",
    "googleapis-common-protos==1.70.0",
    "grpcio>=1.80.0",
    "idna==3.10",
    "pillow>=12.2.0",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pytelegrambotapi==4.26.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "rsa==4.9.1",
    "urllib3==2.4.0",
    "python-escpos>=3.1",
    "pyusb>=1.3.1",
]
